@@ -1,6 +1,7 @@
 Revision history for perl distribution App-screenorama
 
 0.06 Not Released
+ - Fix setting "program" from config file
  - Will escape "<" before printing to web
 
 0.05 2015-05-04T07:55:24+0200
